# engraver

./: .gitignore  .travis.yml  App.config  Cargo.toml  EngraverForm.Designer.cs  EngraverForm.cs  EngraverForm.resx  EngraverGUI.csproj  EngraverGUI.sln  LICENSE  Makefile  Program.cs  README.md  apex_memmove.c  apex_memmove.h  build.rs  helper.c  helper.h  mshabal.h  mshabal256.h  mshabal256_avx2.c  mshabal_avx1.c  mshabal_sse4.c  osdetect.mk  packages.config  plot.c  shabal.h  shabal64-darwin.s  test.pl
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
src/: buffer.rs  cpu_hasher.rs  gpu_hasher.rs  hasher.rs  main.rs  ocl.rs  plotter.rs  poc_hashing.rs  scheduler.rs  shabal256.rs  utils.rs  writer.rs
src/c/: common.h  mshabal_128_avx.c  mshabal_128_avx.h  mshabal_128_sse2.c  mshabal_128_sse2.h  mshabal_256_avx2.c  mshabal_256_avx2.h  mshabal_512_avx512f.c  mshabal_512_avx512f.h  noncegen_128_avx.c  noncegen_128_avx.h  noncegen_128_sse2.c  noncegen_128_sse2.h  noncegen_256_avx2.c  noncegen_256_avx2.h  noncegen_32.c  noncegen_32.h  noncegen_512_avx512f.c  noncegen_512_avx512f.h  sph_shabal.c  sph_shabal.h
src/ocl/: kernel.cl
