[package]
name = "engraver"
version = "2.0.2"
license = "GPL-3.0"
authors = ["PoC Consortium <bots@cryptoguru.org>"]
description = """
Engraver - a Burst plotter written in Rust
"""
[features]
opencl = ["ocl-core"]

[dependencies]
crossbeam-channel = "0.2.4"
ocl-core = { version = "0.10.0", optional = true } 
clap = "2.32.0"
raw-cpuid = "5.0.0"
sys-info = "0.5.6"
cfg-if = "0.1"
pbr = "1.0.1"
humanize-rs = "0.1.4"
libc = "0.1"
rayon = "1.0"
core_affinity = "0.5.9"
stopwatch = "0.0.7"
fs2 = "0.4.3"
page_size = "0.4.1"
aligned_alloc = "0.1"

[target.'cfg(linux)'.dependencies]
thread-priority = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std","fileapi","securitybaseapi"] }

[build-dependencies]
cc = "1.0"