[package]
name = "engraver"
version = "2.4.0"
license = "GPL-3.0"
authors = ["PoC Consortium <bots@cryptoguru.org>"]
description = """
Engraver - a PoC2 plotter written in Rust
"""
repository = "https://github.com/PoC-Consortium/engraver"
documentation = "https://github.com/PoC-Consortium/engraver"
keywords = ["poc2", "plotter", "rust","cryptocurrency"]
readme = "README.md"

[features]
opencl = ["ocl-core"]

[dependencies]
crossbeam-channel = "0.3.6"
ocl-core = { version = "0.10.0", optional = true } 
clap = "2.32.0"
raw-cpuid = "6.1.0"
sys-info = "0.5.6"
cfg-if = "0.1.6"
pbr = "1.0.1"
humanize-rs = "0.1.5"
libc = "0.2.46"
rayon = "1.0.3"
core_affinity = "0.5.9"
stopwatch = "0.0.7"
fs2 = "0.4.3"
page_size = "0.4.1"
aligned_alloc = "0.1.3"

[target.'cfg(linux)'.dependencies]
thread-priority = "0.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std","fileapi","securitybaseapi"] }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
rust-crypto = "0.2.36"
